@@ -37,7 +37,6 @@ import org.elasticsearch.xpack.security.support.SecurityIndexManager;
 
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -78,7 +77,7 @@ public final class InternalRealms {
         return ReservedRealm.TYPE.equals(type);
     }
 
-    static Collection<String> getConfigurableRealmsTypes() {
+    public static Collection<String> getConfigurableRealmsTypes() {
         return Collections.unmodifiableSet(XPACK_TYPES);
     }
 
@@ -102,23 +101,35 @@ public final class InternalRealms {
                                                           NativeRoleMappingStore nativeRoleMappingStore,
                                                           SecurityIndexManager securityIndex) {
 
-        Map<String, Realm.Factory> map = new HashMap<>();
-        map.put(FileRealmSettings.TYPE, config -> new FileRealm(config, resourceWatcherService, threadPool));
-        map.put(NativeRealmSettings.TYPE, config -> {
-            final NativeRealm nativeRealm = new NativeRealm(config, nativeUsersStore, threadPool);
-            securityIndex.addIndexStateListener(nativeRealm::onSecurityIndexStateChange);
-            return nativeRealm;
-        });
-        map.put(LdapRealmSettings.AD_TYPE, config -> new LdapRealm(config, sslService,
-            resourceWatcherService, nativeRoleMappingStore, threadPool));
-        map.put(LdapRealmSettings.LDAP_TYPE, config -> new LdapRealm(config,
-            sslService, resourceWatcherService, nativeRoleMappingStore, threadPool));
-        map.put(PkiRealmSettings.TYPE, config -> new PkiRealm(config, resourceWatcherService, nativeRoleMappingStore));
-        map.put(SamlRealmSettings.TYPE, config -> SamlRealm.create(config, sslService, resourceWatcherService, nativeRoleMappingStore));
-        map.put(KerberosRealmSettings.TYPE, config -> new KerberosRealm(config, nativeRoleMappingStore, threadPool));
-        map.put(OpenIdConnectRealmSettings.TYPE, config -> new OpenIdConnectRealm(config, sslService, nativeRoleMappingStore,
-            resourceWatcherService));
-        return Collections.unmodifiableMap(map);
+        return Map.of(
+                // file realm
+                FileRealmSettings.TYPE,
+                config -> new FileRealm(config, resourceWatcherService, threadPool),
+                // native realm
+                NativeRealmSettings.TYPE,
+                config -> {
+                    final NativeRealm nativeRealm = new NativeRealm(config, nativeUsersStore, threadPool);
+                    securityIndex.addIndexStateListener(nativeRealm::onSecurityIndexStateChange);
+                    return nativeRealm;
+                },
+                // active directory realm
+                LdapRealmSettings.AD_TYPE,
+                config -> new LdapRealm(config, sslService, resourceWatcherService, nativeRoleMappingStore, threadPool),
+                // LDAP realm
+                LdapRealmSettings.LDAP_TYPE,
+                config -> new LdapRealm(config, sslService, resourceWatcherService, nativeRoleMappingStore, threadPool),
+                // PKI realm
+                PkiRealmSettings.TYPE,
+                config -> new PkiRealm(config, resourceWatcherService, nativeRoleMappingStore),
+                // SAML realm
+                SamlRealmSettings.TYPE,
+                config -> SamlRealm.create(config, sslService, resourceWatcherService, nativeRoleMappingStore),
+                // Kerberos realm
+                KerberosRealmSettings.TYPE,
+                config -> new KerberosRealm(config, nativeRoleMappingStore, threadPool),
+                // OpenID Connect realm
+                OpenIdConnectRealmSettings.TYPE,
+                config -> new OpenIdConnectRealm(config, sslService, nativeRoleMappingStore, resourceWatcherService));
     }
 
     private InternalRealms() {
